beginning full overview

--- a/hons/docs/figures/exCompare.tex
+++ b/hons/docs/figures/exCompare.tex
@@ -29,8 +29,8 @@
 	\bput(0.15){1}
 	\bput(0.85){1}
 	\ncline{->}{b02}{b12}
-	\bput(0.15){1}
-	\bput(0.85){1}
+	\aput(0.15){1}
+	\aput(0.85){1}
 	\ncline{->}{b11}{b21}
 	\bput(0.15){1}
 	\bput(0.85){1}
@@ -41,8 +41,8 @@
 	\bput(0.15){1}
 	\bput(0.85){1}
 	\ncline{->}{b12}{b22}
-	\bput(0.15){1}
-	\bput(0.85){1}
+	\aput(0.15){1}
+	\aput(0.85){1}
 	
 	
 \end{pspicture}
