--- a/hons/docs/figures/exRampup.tex
+++ b/hons/docs/figures/exRampup.tex
@@ -2,8 +2,8 @@
 \hline
 \# actors & \multicolumn{4}{|c|}{Duplicates} \\ \cline{2-5}
  & {\bf1} & {\bf2} & {\bf3} & {\bf4} \\ \hline
-{\bf 3} & 10.4015 & 28.5664 & 56.7657 & 96.2925 \\ \hline
-{\bf 4} & 14.221 & 43.6634 & - & - \\ \hline
+{\bf 3} & 10.4015 & 28.5664 & 56.7657 & 95.1483 \\ \hline
+{\bf 4} & 14.221 & 43.6634 & 92.1117 & - \\ \hline
 {\bf 5} & 16.8804 & 50.8968 & - & - \\ \hline
-{\bf 6} & 18.856 & 66.9828 & - & - \\ \hline
+{\bf 6} & 20.2567 & 69.3995 & - & - \\ \hline
 \end{tabular}
