--- a/hons/docs/tIntroduction.tex
+++ b/hons/docs/tIntroduction.tex
@@ -11,12 +11,12 @@ Chapter \ref{chapBack} will provide a more thorough background.
 
 Concurrency and parallelism have become critical in modern applications.
 The use of multicore platforms, in addition the so-called {\em cloud} computers (networked heterogeneous clusters), are becoming more common, in particular for data management in large data centers, however, to access their full potential requires effort on the part of the programmer to parallelise code.
-One method of achieving explicit parallelisation for certain kinds of computations, is to decompose the program to an interconnected network of functions, called a {\em computational graph}.
+One method of achieving explicit parallelisation for certain kinds of computations is to decompose the program to an interconnected network of functions, called a {\em computational graph}.
 SDF graphs are a subset of computational graphs where the amount of data which moves between the computing nodes (called {\em actors}) is known statically.
 
 The ease of distributing these actors onto multiple-processor machines lends them well to cloud architectures.
 However cloud machines in practice have a high probability of failing.
-Well-known cloud applications like Map-Reduce \cite{dea08} must have explicit controls to ensure correct output, even when parts of the machine they are being run on crash.
+Well-known cloud applications like Map-Reduce \cite{dea08} must have explicit controls to ensure correct output, even when parts of the machine on which they are being run fail.
 The method by which applications ensure correct functioning is called its {\em fault tolerance mechanism}.
 
 \section{Motivation}
@@ -34,7 +34,7 @@ However if stream programs are to be used in place of Map-Reduce, they must ensu
 
 The current research on parallel streaming programs deals with partitioning (assigning) actors for performance gains or data locality.
 Whilst the high failure probability on cloud machines is well known, little research has been done on dealing with this specifically for stream programs.
-A clear presentation of how SDF programs specifically can be adapted to resist failure does not to the best of our knowledge exist in the literature.
+A clear presentation of how SDF programs specifically can be adapted to resist failure does not, to the best of our knowledge, exist in the literature.
 
 \section{Thesis Goals}
 \label{secInGoal}
@@ -48,11 +48,11 @@ More explicitly this work aims to answer the research questions:
 			We must have an understanding of how fault tolerance can be assured for stream graphs in order to analyse them.
 	\item What is the cost of the fault tolerance mechanisms?
 			This refers firstly to the costs of implementing the fault tolerance, whether there are features required on the target platform to guarantee correct execution.
-			It also is concerned with the overheads necessary for fault tolerance, what the tradeoffs are between execution times and communication requirements to provide for fault tolerance.
+			It is also concerned with the overheads necessary for fault tolerance, what the tradeoffs are between execution times and communication requirements to provide for fault tolerance.
 			The costs may be in terms of performance, accuracy, speed or buffer requirements.
-	\item How can we assign actors to processors so as to minimise the chance of a crash?
+	\item How can we assign actors to processors so as to minimise the chance of a failure?
 			And how easily can this be done?
-			What limitations must be imposed on the normal assignment of actors to processors must be understood, as well as whether this makes the problem of assigning intractable.
+			The limitations that are be imposed on the normal assignment of actors to processors must be understood, as well as whether this makes the problem of assigning intractable.
 	\item How do we execute a stream program with robustness?
 			This includes both the normal running of programs and the actual execution of fault-recovery systems, where recovery systems themselves may need to be executed on faulty machines.
 	\item What assurances can be made?
@@ -70,12 +70,12 @@ In order to fulfil the goals stated in section \ref{secInGoal} this thesis makes
 			Our model is actually encoded in AMPL (See Appendix \ref{CHEESE}) and used to run experiments (see Chapter \ref{chapExperiment}).
 	\item Proof of the NP-Hardness for the robust assignment of actors.
 			This proof is shown for the simple assignment case, however it follows that more complex variants of the assignment problem are also NP-Hard.
-	\item A heuristic for the assignment of actors to processors with run-time bounded polynomially in the size of the problem.
+	\item A heuristic for the assignment of actors to processors, where run-time is bounded polynomially in the size of the problem.
 			Though this heuristic has unknown approximation bounds, it runs in $O(n^2 p)$ time, for computational graphs with $n$ actors and $p$ processors.
 	\item A simulator which executes arbitrary SDF graphs with user-coded filters on a virtual cloud-machine.
 			This simulator implements the fault-tolerance mechanisms discussed in the thesis.
 	\item Experimental analysis of the heuristic's performance using the simulator.
-			Performance is analysed both during executions which fault an those which run smoothly.
+			Performance is analysed both during executions which fault and those which run smoothly.
 			The experiments also verify some of the properties which the model predicts.
 \end{itemize}
 
@@ -108,6 +108,6 @@ These experiments make use of the simulator described in Chapter \ref{chapSystem
 
 Chapter \ref{chapRelated} surveys the current literature related to this thesis.
 The works examined in this section were used throughout the development of the simulator.
-Chapter \ref{chapConclusion} examines the effectiveness of this thesis in answering the research questions it set out to.
+Chapter \ref{chapConclusion} examines the effectiveness of this thesis in answering the research questions stated in Section \ref{secInGoal}.
 Reference is made to the results gained during experimentation and development.
 Possibilities for future work are also detailed here.
